--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext.kotlinVersion = '1.3.40'
     repositories {
         google()
         jcenter()
@@ -9,7 +9,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,6 +20,22 @@ allprojects {
         google()
         jcenter()
     }
+}
+
+ext {
+    minSdkVersion = 21
+    targetSdkVersion = 28
+    compileSdkVersion = 28
+
+    appCompatVersion = '1.0.2'
+    constraintLayoutVersion = '1.1.3'
+    espressoVersion = '3.2.0'
+    jUnitVersion = '4.12'
+    ktxVersion = '1.0.2'
+    materialVersion = '1.0.0'
+    navigationVersion = '2.1.0-alpha05'
+    recyclerViewVersion = '1.0.0'
+    testRunnerVersion = '1.2.0'
 }
 
 task clean(type: Delete) {
