--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlinVersion = '1.3.40'
+    ext.navigationVersion = '2.1.0-alpha05'
     repositories {
         google()
         jcenter()
@@ -10,6 +11,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -29,11 +31,12 @@ ext {
 
     appCompatVersion = '1.0.2'
     constraintLayoutVersion = '1.1.3'
+    coroutinesVersion = '1.2.1'
     espressoVersion = '3.2.0'
     jUnitVersion = '4.12'
+    koinVersion = '2.0.1'
     ktxVersion = '1.0.2'
     materialVersion = '1.0.0'
-    navigationVersion = '2.1.0-alpha05'
     recyclerViewVersion = '1.0.0'
     testRunnerVersion = '1.2.0'
 }
