--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,9 @@ ext {
     espressoVersion = '3.2.0'
     jUnitVersion = '4.12'
     koinVersion = '2.0.1'
-    ktxVersion = '1.0.2'
     materialVersion = '1.0.0'
     recyclerViewVersion = '1.0.0'
+    roomVersion = '2.1.0'
     testRunnerVersion = '1.2.0'
 }
 
