--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlinVersion = '1.3.40'
-    ext.navigationVersion = '2.1.0-alpha05'
+    ext.navigationVersion = '2.1.0-alpha06'
     repositories {
         google()
         jcenter()
@@ -29,11 +29,16 @@ ext {
     targetSdkVersion = 28
     compileSdkVersion = 28
 
+    archTestingVersion = '2.0.0'
+    androidXTestCoreVersion = '1.2.0-beta01'
+    androidXTestExtKotlinRunnerVersion = '1.1.1-beta01'
+    androidXTestRulesVersion = '1.2.0-beta01'
     appCompatVersion = '1.0.2'
     constraintLayoutVersion = '1.1.3'
     coroutinesVersion = '1.2.1'
     espressoVersion = '3.2.0'
     jUnitVersion = '4.12'
+    kluentVersion = '1.51'
     koinVersion = '2.0.1'
     materialVersion = '1.0.0'
     recyclerViewVersion = '1.0.0'
