--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlinVersion = '1.3.40'
-    ext.navigationVersion = '2.1.0-alpha06'
+    ext.kotlinVersion = '1.3.61'
+    ext.navigationVersion = '2.2.1'
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         // NOTE: Do not place your application dependencies here; they belong
@@ -26,14 +26,14 @@ allprojects {
 
 ext {
     minSdkVersion = 21
-    targetSdkVersion = 28
-    compileSdkVersion = 28
+    targetSdkVersion = 29
+    compileSdkVersion = 29
 
     archTestingVersion = '2.0.0'
     androidXTestCoreVersion = '1.2.0-beta01'
     androidXTestExtKotlinRunnerVersion = '1.1.1-beta01'
     androidXTestRulesVersion = '1.2.0-beta01'
-    appCompatVersion = '1.0.2'
+    appCompatVersion = '1.1.0'
     constraintLayoutVersion = '1.1.3'
     coroutinesVersion = '1.2.1'
     espressoVersion = '3.2.0'
@@ -41,8 +41,8 @@ ext {
     kluentVersion = '1.51'
     koinVersion = '2.0.1'
     materialVersion = '1.0.0'
-    recyclerViewVersion = '1.0.0'
-    roomVersion = '2.1.0'
+    recyclerViewVersion = '1.1.0'
+    roomVersion = '2.2.3'
     testRunnerVersion = '1.2.0'
 }
 
